[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Itay Bookstein <ibookstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
num_enum = "0.5.1"
