[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Itay Bookstein <ibookstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
regex = "1.4.2"
num_enum = "0.5.1"
num-integer = "0.1.44"
num-bigint = "0.3.1"
num-traits = "0.2.11"
